created api client and service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.9'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
 
+    //Retrofit2
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
+
     //Guava
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
 
