--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -50,6 +51,13 @@ dependencies {
 
     //Guava
     compile group: 'com.google.guava', name: 'guava', version: '20.0'
+
+    //ButterKnife
+    compile 'com.jakewharton:butterknife:8.8.1'
+    apt 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //Picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
